search modules by type

--- a/src/assets/x4_game_data/8.0-Diplomacy/locales/de.json
+++ b/src/assets/x4_game_data/8.0-Diplomacy/locales/de.json
@@ -1,5 +1,14 @@
 {
   "(TEMP)nividiumgems": "nividiumgems",
+  "{1001,1706}": "Radar",
+  "{1001,2421}": "Produktionsmodule",
+  "{1001,2422}": "Lagermodule",
+  "{1001,2424}": "Verteidigungsmodule",
+  "{1001,2439}": "Baumodule",
+  "{1001,2451}": "Wohnmodule",
+  "{1001,2454}": "Expeditionsmodule",
+  "{1001,9620}": "Wohlbefindensmodule",
+  "{1001,9621}": "Verarbeitungsmodule",
   "{20102,2011}": "Hauptquartier",
   "{20104,10001}": "Verbundwerkstoffproduktion",
   "{20104,100101}": "Habitat-Ringerweiterung",
@@ -229,6 +238,7 @@
   "{20104,55701}": "Argonen Kreuz-Verbindungsgerüst 02",
   "{20104,55901}": "Argonen L-Verbindungsgerüst 01",
   "{20104,56101}": "Argonen T-Verbindungsgerüst 01",
+  "{20104,59901}": "Verbindungsmodul",
   "{20104,60101}": "Fertigungshangar für S-Schiffe",
   "{20104,60201}": "Fertigungshangar für M-Schiffe",
   "{20104,60301}": "Fertigungshangar für L-Schiffe",
@@ -288,6 +298,8 @@
   "{20104,74701}": "Boronen 4M14S Luxus-Dockbereich",
   "{20104,74801}": "Handelsstation der Boronen Hexa-Dock-Raumpier",
   "{20104,74901}": "Argonen Einzeldock kurz Raumpier",
+  "{20104,79801}": "Raumpier-Modul",
+  "{20104,79901}": "Dockbereichsmodul",
   "{20104,90101}": "Terraner S Containerlager",
   "{20104,90201}": "Terraner M Containerlager",
   "{20104,90301}": "Terraner L Containerlager",
