--- a/src/assets/x4_game_data/8.0-Diplomacy/locales/en.json
+++ b/src/assets/x4_game_data/8.0-Diplomacy/locales/en.json
@@ -1,5 +1,14 @@
 {
   "(TEMP)nividiumgems": "nividiumgems",
+  "{1001,1706}": "Radar",
+  "{1001,2421}": "Production Modules",
+  "{1001,2422}": "Storage Modules",
+  "{1001,2424}": "Defence Modules",
+  "{1001,2439}": "Build Modules",
+  "{1001,2451}": "Habitation Modules",
+  "{1001,2454}": "Venture Modules",
+  "{1001,9620}": "Welfare Modules",
+  "{1001,9621}": "Processing Modules",
   "{20102,2011}": "Headquarters",
   "{20104,10001}": "Advanced Composite Production",
   "{20104,100101}": "Habitat Ring Extension",
@@ -229,6 +238,7 @@
   "{20104,55701}": "Argon Cross Connection Structure 02",
   "{20104,55901}": "Argon L Connection Structure 01",
   "{20104,56101}": "Argon T Connection Structure 01",
+  "{20104,59901}": "Connection Module",
   "{20104,60101}": "S Ship Fabrication Bay",
   "{20104,60201}": "M Ship Fabrication Bay",
   "{20104,60301}": "L Ship Fabrication Bay",
@@ -288,6 +298,8 @@
   "{20104,74701}": "Boron 4M14S Luxury Dock Area",
   "{20104,74801}": "Boron Trading Station Hexa-Dock Pier",
   "{20104,74901}": "Argon 1-Dock Short Pier",
+  "{20104,79801}": "Pier Module",
+  "{20104,79901}": "Dock Area Module",
   "{20104,90101}": "Terran S Container Storage",
   "{20104,90201}": "Terran M Container Storage",
   "{20104,90301}": "Terran L Container Storage",
