--- a/src/assets/x4_game_data/8.0-Diplomacy/locales/es.json
+++ b/src/assets/x4_game_data/8.0-Diplomacy/locales/es.json
@@ -1,5 +1,14 @@
 {
   "(TEMP)nividiumgems": "nividiumgems",
+  "{1001,1706}": "Radar",
+  "{1001,2421}": "Módulos de Producción",
+  "{1001,2422}": "Módulos de Almacenamiento",
+  "{1001,2424}": "Módulos de Defensa",
+  "{1001,2439}": "Módulos de Construcción",
+  "{1001,2451}": "Módulos Residenciales",
+  "{1001,2454}": "Módulos de Incursiones",
+  "{1001,9620}": "Módulos de Bienestar",
+  "{1001,9621}": "Módulos de Procesamiento",
   "{20102,2011}": "Cuartel General",
   "{20104,10001}": "Producción de Compuestos Avanzados",
   "{20104,100101}": "Extensión del Anillo Hábitat",
@@ -229,6 +238,7 @@
   "{20104,55701}": "Estructura de Conexión en Cruz 02 Argon",
   "{20104,55901}": "Estructura de Conexión en L 01 Argon",
   "{20104,56101}": "Estructura de Conexión en T 01 Argon",
+  "{20104,59901}": "Módulo de Conexión",
   "{20104,60101}": "Bahía de Fabricación de Naves S",
   "{20104,60201}": "Bahía de Fabricación de Naves M",
   "{20104,60301}": "Bahía de Fabricación de Naves L",
@@ -288,6 +298,8 @@
   "{20104,74701}": "Area de Atraque de Lujo 4M14P Boron",
   "{20104,74801}": "Embarcadero Estación Comercial Boron Muelle Hexagonal",
   "{20104,74901}": "Embarcadero Sin un muelle Argon",
+  "{20104,79801}": "Módulo de Muelle",
+  "{20104,79901}": "Módulo de Área de Atraque",
   "{20104,90101}": "Almacenamiento en Contenedores Terran S",
   "{20104,90201}": "Almacenamiento en Contenedores Terran M",
   "{20104,90301}": "Almacenamiento en Contenedores Terran L",
