--- a/src/assets/x4_game_data/8.0-Diplomacy/locales/fr.json
+++ b/src/assets/x4_game_data/8.0-Diplomacy/locales/fr.json
@@ -1,5 +1,14 @@
 {
   "(TEMP)nividiumgems": "nividiumgems",
+  "{1001,1706}": "Radar",
+  "{1001,2421}": "Modules de production",
+  "{1001,2422}": "Modules de stockage",
+  "{1001,2424}": "Modules de défense",
+  "{1001,2439}": "Modules de construction",
+  "{1001,2451}": "Modules d'habitation",
+  "{1001,2454}": "Modules d'aventure",
+  "{1001,9620}": "Modules de bien-être",
+  "{1001,9621}": "Modules de traitements",
   "{20102,2011}": "Quartiers généraux",
   "{20104,10001}": "Production de composites avancés",
   "{20104,100101}": "Extension d'anneau d'Habitat",
@@ -229,6 +238,7 @@
   "{20104,55701}": "Argon Structure de connexion en croix 02",
   "{20104,55901}": "Argon Structure de connexion en L 01",
   "{20104,56101}": "Argon Structure de connexion en T 01",
+  "{20104,59901}": "Module de connexion",
   "{20104,60101}": "Baie de fabrication de vaisseaux de classe S",
   "{20104,60201}": "Baie de fabrication de vaisseaux de classe M",
   "{20104,60301}": "Baie de fabrication de vaisseaux de classe L",
@@ -288,6 +298,8 @@
   "{20104,74701}": "Boron 4M14S Zone d'amarrage de luxe",
   "{20104,74801}": "Jetée de Station commerciale Boron Hexa-Dock",
   "{20104,74901}": "Argon 1-Dock Court Jetée",
+  "{20104,79801}": "Module de jetée",
+  "{20104,79901}": "Module de zone d'amarrage",
   "{20104,90101}": "Terrien S Stockage de conteneurs",
   "{20104,90201}": "Terrien M Stockage de conteneurs",
   "{20104,90301}": "Terrien L Stockage de conteneurs",
