--- a/src/assets/x4_game_data/8.0-Diplomacy/locales/it.json
+++ b/src/assets/x4_game_data/8.0-Diplomacy/locales/it.json
@@ -1,5 +1,14 @@
 {
   "(TEMP)nividiumgems": "nividiumgems",
+  "{1001,1706}": "Radar",
+  "{1001,2421}": "Moduli di Produzione",
+  "{1001,2422}": "Moduli di Stoccaggio",
+  "{1001,2424}": "Moduli Difensivi",
+  "{1001,2439}": "Moduli di Costruzione",
+  "{1001,2451}": "Moduli Abitativi",
+  "{1001,2454}": "Moduli di Avventura",
+  "{1001,9620}": "Moduli Sociali",
+  "{1001,9621}": "Moduli di Trattamento",
   "{20102,2011}": "Quartier Generale",
   "{20104,10001}": "Produzione di Compositi Avanzati",
   "{20104,100101}": "Estensione dell'Anello dell'Habitat",
@@ -229,6 +238,7 @@
   "{20104,55701}": "Struttura di Connessione a Croce Argon 02",
   "{20104,55901}": "Struttura di Connessione a L Argon 01",
   "{20104,56101}": "Struttura di Connessione a T Argon 01",
+  "{20104,59901}": "Modulo di Connessione",
   "{20104,60101}": "Baia di Costruzione Navi S",
   "{20104,60201}": "Baia di Costruzione Navi M",
   "{20104,60301}": "Baia di Costruzione Navi L",
@@ -288,6 +298,8 @@
   "{20104,74701}": "4M14S Area di Attracco Di Lusso Boron",
   "{20104,74801}": "Molo di Attracco Sestuplo Spazioporto Commerciale Boron",
   "{20104,74901}": "Argon Molo Attracco Singolo Corto",
+  "{20104,79801}": "Modulo Molo",
+  "{20104,79901}": "Modulo Area d'Attracco",
   "{20104,90101}": "Magazzino Container Terrestre S",
   "{20104,90201}": "Magazzino Container Terrestre M",
   "{20104,90301}": "Magazzino Container Terrestre L",
