--- a/src/assets/x4_game_data/8.0-Diplomacy/locales/ja.json
+++ b/src/assets/x4_game_data/8.0-Diplomacy/locales/ja.json
@@ -1,5 +1,14 @@
 {
   "(TEMP)nividiumgems": "nividiumgems",
+  "{1001,1706}": "レーダー",
+  "{1001,2421}": "製造モジュール",
+  "{1001,2422}": "保管モジュール",
+  "{1001,2424}": "防衛モジュール",
+  "{1001,2439}": "建造モジュール",
+  "{1001,2451}": "居住モジュール",
+  "{1001,2454}": "探険モジュール",
+  "{1001,9620}": "福祉モジュール",
+  "{1001,9621}": "処理モジュール",
   "{20102,2011}": "本部",
   "{20104,10001}": "高度化合物の製造",
   "{20104,100101}": "居住施設用リングの拡張",
@@ -229,6 +238,7 @@
   "{20104,55701}": "アルゴン 十字接続構造体 02",
   "{20104,55901}": "アルゴン L字接続構造体 01",
   "{20104,56101}": "アルゴン T字接続構造体 01",
+  "{20104,59901}": "接続モジュール",
   "{20104,60101}": "小型艦船製造ベイ",
   "{20104,60201}": "中型艦船製造ベイ",
   "{20104,60301}": "大型艦船製造ベイ",
@@ -288,6 +298,8 @@
   "{20104,74701}": "ボロン 中型4 小型14 高級 ドックエリア",
   "{20104,74801}": "ボロン交易ステーション ヘキサドック 桟橋",
   "{20104,74901}": "アルゴン 1-ドック 短 桟橋",
+  "{20104,79801}": "桟橋モジュール",
+  "{20104,79901}": "ドックエリアモジュール",
   "{20104,90101}": "テラン 小型 コンテナ保管庫",
   "{20104,90201}": "テラン 中型 コンテナ保管庫",
   "{20104,90301}": "テラン 大型 コンテナ保管庫",
