--- a/src/assets/x4_game_data/8.0-Diplomacy/locales/ko.json
+++ b/src/assets/x4_game_data/8.0-Diplomacy/locales/ko.json
@@ -1,5 +1,14 @@
 {
   "(TEMP)nividiumgems": "nividiumgems",
+  "{1001,1706}": "레이더",
+  "{1001,2421}": "생산 모듈들",
+  "{1001,2422}": "저장 모듈들",
+  "{1001,2424}": "방어 모듈들",
+  "{1001,2439}": "건설 모듈들",
+  "{1001,2451}": "거주 모듈들",
+  "{1001,2454}": "탐험 모듈들",
+  "{1001,9620}": "복지 모듈",
+  "{1001,9621}": "가공 모듈",
   "{20102,2011}": "본부",
   "{20104,10001}": "고급 복합재 공장",
   "{20104,100101}": "거주지 링 확장물",
@@ -229,6 +238,7 @@
   "{20104,55701}": "아르곤 교차 연결 구조물 02",
   "{20104,55901}": "아르곤 L 연결 구조물 01",
   "{20104,56101}": "아르곤 T 연결 구조물 01",
+  "{20104,59901}": "연결 모듈",
   "{20104,60101}": "S급 함선 제조소",
   "{20104,60201}": "M급 함선 제조소",
   "{20104,60301}": "L급 함선 제조소",
@@ -288,6 +298,8 @@
   "{20104,74701}": "보론 4M14S 고급형 도크 구역",
   "{20104,74801}": "보론 무역 스테이션 헥사-도크 부두",
   "{20104,74901}": "아르곤 1-도크 단선 부두",
+  "{20104,79801}": "부두 모듈",
+  "{20104,79901}": "도크 구역 모듈",
   "{20104,90101}": "테란 S 컨테이너 저장소",
   "{20104,90201}": "테란 M 컨테이너 저장소",
   "{20104,90301}": "테란 L 컨테이너 저장소",
