--- a/src/assets/x4_game_data/8.0-Diplomacy/locales/pl.json
+++ b/src/assets/x4_game_data/8.0-Diplomacy/locales/pl.json
@@ -1,5 +1,14 @@
 {
   "(TEMP)nividiumgems": "nividiumgems",
+  "{1001,1706}": "Radar",
+  "{1001,2421}": "Moduły produkcyjne",
+  "{1001,2422}": "Moduły magazynowe",
+  "{1001,2424}": "Moduły obronne",
+  "{1001,2439}": "Moduły budowy",
+  "{1001,2451}": "Moduły mieszkalne",
+  "{1001,2454}": "Moduły wyprawy",
+  "{1001,9620}": "Moduły socjalne",
+  "{1001,9621}": "Moduły przetwarzania",
   "{20102,2011}": "Kwatera główna",
   "{20104,10001}": "Produkcja kompozytów zaawan.",
   "{20104,100101}": "Rozszerzenie pierścienia mieszkalnego",
@@ -229,6 +238,7 @@
   "{20104,55701}": "Argoni Krzyżakowa struktura łączeniowa 02",
   "{20104,55901}": "Argoni Struktura łączeniowa L 01",
   "{20104,56101}": "Argoni Struktura łączeniowa T 01",
+  "{20104,59901}": "Moduł łączący",
   "{20104,60101}": "Zatoka produkcyjna statków S",
   "{20104,60201}": "Zatoka produkcyjna statków M",
   "{20104,60301}": "Zatoka produkcyjna statków L",
@@ -288,6 +298,8 @@
   "{20104,74701}": "Boroni 4M14S Luksusowa strefa dokowania",
   "{20104,74801}": "Borońska stacja handlowa Hexa-Dok Molo",
   "{20104,74901}": "Argoni Krótki 1-Dok Molo",
+  "{20104,79801}": "Moduł mola",
+  "{20104,79901}": "Moduł obszaru dokowania",
   "{20104,90101}": "Ziemianie S Magazyn kontenerowy",
   "{20104,90201}": "Ziemianie M Magazyn kontenerowy",
   "{20104,90301}": "Ziemianie L Magazyn kontenerowy",
