--- a/src/assets/x4_game_data/8.0-Diplomacy/locales/pt-BR.json
+++ b/src/assets/x4_game_data/8.0-Diplomacy/locales/pt-BR.json
@@ -1,5 +1,14 @@
 {
   "(TEMP)nividiumgems": "nividiumgems",
+  "{1001,1706}": "Radar",
+  "{1001,2421}": "Módulos de produção",
+  "{1001,2422}": "Módulos de armazenamento",
+  "{1001,2424}": "Módulos de defesa",
+  "{1001,2439}": "Módulos de construção",
+  "{1001,2451}": "Módulos de habitação",
+  "{1001,2454}": "Módulos de Aventura",
+  "{1001,9620}": "Módulos de bem-estar",
+  "{1001,9621}": "Módulos de processamento",
   "{20102,2011}": "Quartel General",
   "{20104,10001}": "Prod. de Composto Avançado",
   "{20104,100101}": "Extensão do Anel de Habitat",
@@ -229,6 +238,7 @@
   "{20104,55701}": "Estrutura de Conexão de Cruz Argon 02",
   "{20104,55901}": "Estrutura de Conexão em L Argon 01",
   "{20104,56101}": "Estrutura de Conexão em T Argon 01",
+  "{20104,59901}": "Módulo de Conexão",
   "{20104,60101}": "Área de Fabricação de Naves P",
   "{20104,60201}": "Área de Fabricação de Naves M",
   "{20104,60301}": "Área de Fabricação de Naves G",
@@ -288,6 +298,8 @@
   "{20104,74701}": "Área de Pouso Luxo 4M14S Boron",
   "{20104,74801}": "Píer Hexadoca Estação Comercial Boron",
   "{20104,74901}": "Píer 1-Doca Curta Argon",
+  "{20104,79801}": "Módulo de Píer",
+  "{20104,79901}": "Módulo de Área de Atracação",
   "{20104,90101}": "Terrestre PP Contêiner de Armazenamento",
   "{20104,90201}": "Terrestre M Contêiner de Armazenamento",
   "{20104,90301}": "Terrestre G Contêiner de Armazenamento",
