--- a/src/assets/x4_game_data/8.0-Diplomacy/locales/ru.json
+++ b/src/assets/x4_game_data/8.0-Diplomacy/locales/ru.json
@@ -1,5 +1,14 @@
 {
   "(TEMP)nividiumgems": "nividiumgems",
+  "{1001,1706}": "Радар",
+  "{1001,2421}": "Промышленные модули",
+  "{1001,2422}": "Грузовые модули",
+  "{1001,2424}": "Защитные модули",
+  "{1001,2439}": "Строительные модули",
+  "{1001,2451}": "Жилые модули",
+  "{1001,2454}": "Венчурные модули",
+  "{1001,9620}": "Модули соц. обеспечения",
+  "{1001,9621}": "Модули переработки",
   "{20102,2011}": "Штаб-квартира",
   "{20104,10001}": "Производство суперкомпозитов",
   "{20104,100101}": "Кольцо расширения Ареал",
@@ -229,6 +238,7 @@
   "{20104,55701}": "Аргон Крестовая соединительная конструкция 02",
   "{20104,55901}": "Аргон Соединительная конструкция L 01",
   "{20104,56101}": "Аргон Соединительная конструкция T 01",
+  "{20104,59901}": "Соединительный модуль",
   "{20104,60101}": "Производственный отсек S-кораблей",
   "{20104,60201}": "Производственный отсек M-кораблей",
   "{20104,60301}": "Производственный отсек L-кораблей",
@@ -288,6 +298,8 @@
   "{20104,74701}": "Борон 4M14S Люксовый Посадочная площадка",
   "{20104,74801}": "Бор. Торговая станция Гекса-док Причал",
   "{20104,74901}": "Аргон Короткий Док-1 Причал",
+  "{20104,79801}": "Причальный модуль",
+  "{20104,79901}": "Посадочный модуль",
   "{20104,90101}": "Землянин S Хранилище контейнеров",
   "{20104,90201}": "Землянин M Хранилище контейнеров",
   "{20104,90301}": "Землянин L Хранилище контейнеров",
