--- a/src/assets/x4_game_data/8.0-Diplomacy/locales/zh-CN.json
+++ b/src/assets/x4_game_data/8.0-Diplomacy/locales/zh-CN.json
@@ -1,5 +1,14 @@
 {
   "(TEMP)nividiumgems": "nividiumgems",
+  "{1001,1706}": "雷达",
+  "{1001,2421}": "生产模块",
+  "{1001,2422}": "仓储模块",
+  "{1001,2424}": "防御模块",
+  "{1001,2439}": "建造模块",
+  "{1001,2451}": "居住模块",
+  "{1001,2454}": "远征模块",
+  "{1001,9620}": "福利模块",
+  "{1001,9621}": "处理模块",
   "{20102,2011}": "总部",
   "{20104,10001}": "先进复合材料产线",
   "{20104,100101}": "栖息地环扩展",
@@ -229,6 +238,7 @@
   "{20104,55701}": "Argon 交叉连接结构 02",
   "{20104,55901}": "Argon L 型连接结构 01",
   "{20104,56101}": "Argon T 型连接结构 01",
+  "{20104,59901}": "连接模块",
   "{20104,60101}": "S级飞船制造港",
   "{20104,60201}": "M级飞船制造港",
   "{20104,60301}": "L级飞船制造港",
@@ -288,6 +298,8 @@
   "{20104,74701}": "Boron 4M14S 豪华 停靠区",
   "{20104,74801}": "Boron贸易空间站 六角大型泊位 码头",
   "{20104,74901}": "Argon 紧缩型-1x大型泊位 码头",
+  "{20104,79801}": "码头模块",
+  "{20104,79901}": "停靠区模块",
   "{20104,90101}": "Terran S 集装仓储",
   "{20104,90201}": "Terran M 集装仓储",
   "{20104,90301}": "Terran L 集装仓储",
