--- a/src/assets/x4_game_data/8.0-Diplomacy/locales/zh-TW.json
+++ b/src/assets/x4_game_data/8.0-Diplomacy/locales/zh-TW.json
@@ -1,5 +1,14 @@
 {
   "(TEMP)nividiumgems": "nividiumgems",
+  "{1001,1706}": "雷達",
+  "{1001,2421}": "生產模塊",
+  "{1001,2422}": "倉儲模塊",
+  "{1001,2424}": "防禦模塊",
+  "{1001,2439}": "建造模塊",
+  "{1001,2451}": "居住模塊",
+  "{1001,2454}": "遠征模塊",
+  "{1001,9620}": "福利模塊",
+  "{1001,9621}": "處理模塊",
   "{20102,2011}": "總部",
   "{20104,10001}": "先進複合材料產線",
   "{20104,100101}": "棲息地環擴展",
@@ -229,6 +238,7 @@
   "{20104,55701}": "Argon 交叉連接結構 02",
   "{20104,55901}": "Argon L 型連接結構 01",
   "{20104,56101}": "Argon T 型連接結構 01",
+  "{20104,59901}": "連接模塊",
   "{20104,60101}": "S級飛船製造港",
   "{20104,60201}": "M級飛船製造港",
   "{20104,60301}": "L級飛船製造港",
@@ -288,6 +298,8 @@
   "{20104,74701}": "Boron 4M14S 豪華 停靠區",
   "{20104,74801}": "Boron 貿易站 六角停靠區 碼頭",
   "{20104,74901}": "Argon 單一短停靠區 碼頭",
+  "{20104,79801}": "碼頭模塊",
+  "{20104,79901}": "停靠區模組",
   "{20104,90101}": "Terran S 集裝倉儲",
   "{20104,90201}": "Terran M 集裝倉儲",
   "{20104,90301}": "Terran L 集裝倉儲",
