--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -35,7 +35,9 @@
     "build_res_price": "BUILD RESOURCES PRICE",
     "station_planner": "Station Planner",
     "module_list": "Station Modules",
-    "search_placeholder": "Search (Name / ID / Pinyin)...",
+    "search_placeholder": "Search (Name / ID)...",
+    "auto_fill_deficit": "AUTO-FILL DEFICIT",
+    "consider_workforce_bonus": "Consider Workforce Bonus for Calculation",
     "add_hint": "Add to planning list",
     "sun_light": "SUN LIGHT",
     "new": "New",
