modules group by group, not type

--- a/src/assets/x4_game_data/8.0-Diplomacy/locales/de.json
+++ b/src/assets/x4_game_data/8.0-Diplomacy/locales/de.json
@@ -386,5 +386,30 @@
   "{20201,7201}": "BoGas",
   "{20201,7301}": "Plankton",
   "{20201,801}": "Antriebsteile",
-  "{20201,901}": "Feldspulen"
+  "{20201,901}": "Feldspulen",
+  "{20215,1001}": "Schiffstechnologie",
+  "{20215,101}": "Agrargüter",
+  "{20215,1201}": "Wasser",
+  "{20215,1601}": "Drohnen",
+  "{20215,1701}": "Gegenmaßnahmen",
+  "{20215,1801}": "Antriebe",
+  "{20215,1901}": "Raketen",
+  "{20215,2001}": "Schilde",
+  "{20215,201}": "Energie",
+  "{20215,2101}": "Software",
+  "{20215,2201}": "Steuerdüsen",
+  "{20215,2301}": "Geschütztürme",
+  "{20215,2401}": "Waffen",
+  "{20215,301}": "Nahrung",
+  "{20215,3101}": "Raritäten",
+  "{20215,3201}": "Schmuggelware",
+  "{20215,3301}": "Spezialtechnik",
+  "{20215,3401}": "Luxusgüter",
+  "{20215,3501}": "Allgemeine Güter",
+  "{20215,401}": "Gase",
+  "{20215,501}": "High-Tech-Waren",
+  "{20215,601}": "Eis",
+  "{20215,701}": "Mineralien",
+  "{20215,801}": "Pharmazieprodukte",
+  "{20215,901}": "Veredelte Güter"
 }
