--- a/src/assets/x4_game_data/8.0-Diplomacy/locales/en.json
+++ b/src/assets/x4_game_data/8.0-Diplomacy/locales/en.json
@@ -386,5 +386,30 @@
   "{20201,7201}": "BoGas",
   "{20201,7301}": "Plankton",
   "{20201,801}": "Engine Parts",
-  "{20201,901}": "Field Coils"
+  "{20201,901}": "Field Coils",
+  "{20215,1001}": "Ship Technology",
+  "{20215,101}": "Agricultural Goods",
+  "{20215,1201}": "Water",
+  "{20215,1601}": "Drones",
+  "{20215,1701}": "Countermeasures",
+  "{20215,1801}": "Engines",
+  "{20215,1901}": "Missiles",
+  "{20215,2001}": "Shields",
+  "{20215,201}": "Energy",
+  "{20215,2101}": "Software",
+  "{20215,2201}": "Thrusters",
+  "{20215,2301}": "Turrets",
+  "{20215,2401}": "Weapons",
+  "{20215,301}": "Food",
+  "{20215,3101}": "Curiosities",
+  "{20215,3201}": "Contraband",
+  "{20215,3301}": "Hardware",
+  "{20215,3401}": "Luxury Items",
+  "{20215,3501}": "General Items",
+  "{20215,401}": "Gases",
+  "{20215,501}": "High Tech Goods",
+  "{20215,601}": "Ice",
+  "{20215,701}": "Minerals",
+  "{20215,801}": "Pharmaceutical Goods",
+  "{20215,901}": "Refined Goods"
 }
