--- a/src/assets/x4_game_data/8.0-Diplomacy/locales/es.json
+++ b/src/assets/x4_game_data/8.0-Diplomacy/locales/es.json
@@ -386,5 +386,30 @@
   "{20201,7201}": "BoGas",
   "{20201,7301}": "Plancton",
   "{20201,801}": "Componentes de Motores",
-  "{20201,901}": "Bobinas de Campo"
+  "{20201,901}": "Bobinas de Campo",
+  "{20215,1001}": "Tecnología de Nave",
+  "{20215,101}": "Bienes de Agricultura",
+  "{20215,1201}": "Agua",
+  "{20215,1601}": "Drones",
+  "{20215,1701}": "Contramedidas",
+  "{20215,1801}": "Motores",
+  "{20215,1901}": "Misiles",
+  "{20215,2001}": "Escudos",
+  "{20215,201}": "Energía",
+  "{20215,2101}": "Software",
+  "{20215,2201}": "Propulsores",
+  "{20215,2301}": "Torretas",
+  "{20215,2401}": "Armas",
+  "{20215,301}": "Comida",
+  "{20215,3101}": "Curiosidades",
+  "{20215,3201}": "Contrabando",
+  "{20215,3301}": "Hardware",
+  "{20215,3401}": "Objetos de Lujo",
+  "{20215,3501}": "Objetos Misceláneos",
+  "{20215,401}": "Gases",
+  "{20215,501}": "Bienes de Alta Tecnología",
+  "{20215,601}": "Hielo",
+  "{20215,701}": "Minerales",
+  "{20215,801}": "Bienes Farmacéuticos",
+  "{20215,901}": "Bienes Refinados"
 }
