--- a/src/assets/x4_game_data/8.0-Diplomacy/locales/fr.json
+++ b/src/assets/x4_game_data/8.0-Diplomacy/locales/fr.json
@@ -386,5 +386,30 @@
   "{20201,7201}": "Gaz Bo",
   "{20201,7301}": "Plancton",
   "{20201,801}": "Pièces de moteur",
-  "{20201,901}": "Bobines de champ"
+  "{20201,901}": "Bobines de champ",
+  "{20215,1001}": "Technologie de vaisseaux",
+  "{20215,101}": "Marchandises agricoles",
+  "{20215,1201}": "Eau",
+  "{20215,1601}": "Drones",
+  "{20215,1701}": "Contre-mesures",
+  "{20215,1801}": "Moteurs",
+  "{20215,1901}": "Missiles",
+  "{20215,2001}": "Boucliers",
+  "{20215,201}": "Energie",
+  "{20215,2101}": "Logiciels",
+  "{20215,2201}": "Propulseurs",
+  "{20215,2301}": "Tourelles",
+  "{20215,2401}": "Armes",
+  "{20215,301}": "Nourriture",
+  "{20215,3101}": "Babioles",
+  "{20215,3201}": "Contrebande",
+  "{20215,3301}": "Matériel",
+  "{20215,3401}": "Produits de luxe",
+  "{20215,3501}": "Objets Divers",
+  "{20215,401}": "Gaz",
+  "{20215,501}": "Marchandises High-Tech",
+  "{20215,601}": "Glace",
+  "{20215,701}": "Minerais",
+  "{20215,801}": "Marchandises pharmaceutiques",
+  "{20215,901}": "Produits raffinés"
 }
