--- a/src/assets/x4_game_data/8.0-Diplomacy/locales/it.json
+++ b/src/assets/x4_game_data/8.0-Diplomacy/locales/it.json
@@ -386,5 +386,30 @@
   "{20201,7201}": "BoGas",
   "{20201,7301}": "Plancton",
   "{20201,801}": "Parti per Motori",
-  "{20201,901}": "Bobine di Campo"
+  "{20201,901}": "Bobine di Campo",
+  "{20215,1001}": "Tecnologie Navali",
+  "{20215,101}": "Prodotti Agricoli",
+  "{20215,1201}": "Acqua",
+  "{20215,1601}": "Droni",
+  "{20215,1701}": "Contromisure",
+  "{20215,1801}": "Motori",
+  "{20215,1901}": "Missili",
+  "{20215,2001}": "Scudi",
+  "{20215,201}": "Energia",
+  "{20215,2101}": "Software",
+  "{20215,2201}": "Propulsori",
+  "{20215,2301}": "Torrette",
+  "{20215,2401}": "Armi",
+  "{20215,301}": "Cibo",
+  "{20215,3101}": "Curiosità",
+  "{20215,3201}": "Contrabbando",
+  "{20215,3301}": "Attrezzatura",
+  "{20215,3401}": "Articoli di Lusso",
+  "{20215,3501}": "Articoli Generali",
+  "{20215,401}": "Gas",
+  "{20215,501}": "Prodotti Hi-Tech",
+  "{20215,601}": "Ghiaccio",
+  "{20215,701}": "Minerali",
+  "{20215,801}": "Prodotti Farmaceutici",
+  "{20215,901}": "Prodotti Raffinati"
 }
