--- a/src/assets/x4_game_data/8.0-Diplomacy/locales/ja.json
+++ b/src/assets/x4_game_data/8.0-Diplomacy/locales/ja.json
@@ -386,5 +386,30 @@
   "{20201,7201}": "ボーガス",
   "{20201,7301}": "プランクトン",
   "{20201,801}": "エンジン部品",
-  "{20201,901}": "フィールドコイル"
+  "{20201,901}": "フィールドコイル",
+  "{20215,1001}": "艦船技術",
+  "{20215,101}": "農水産物",
+  "{20215,1201}": "水",
+  "{20215,1601}": "ドローン",
+  "{20215,1701}": "防衛装備",
+  "{20215,1801}": "エンジン",
+  "{20215,1901}": "ミサイル",
+  "{20215,2001}": "シールド",
+  "{20215,201}": "エネルギー",
+  "{20215,2101}": "ソフトウェア",
+  "{20215,2201}": "スラスター",
+  "{20215,2301}": "タレット",
+  "{20215,2401}": "武器",
+  "{20215,301}": "食料",
+  "{20215,3101}": "珍重品",
+  "{20215,3201}": "禁制品",
+  "{20215,3301}": "ハードウェア",
+  "{20215,3401}": "贅沢品",
+  "{20215,3501}": "日用品",
+  "{20215,401}": "ガス",
+  "{20215,501}": "高度技術製品",
+  "{20215,601}": "氷",
+  "{20215,701}": "鉱物",
+  "{20215,801}": "医薬品",
+  "{20215,901}": "精製品"
 }
