--- a/src/assets/x4_game_data/8.0-Diplomacy/locales/ko.json
+++ b/src/assets/x4_game_data/8.0-Diplomacy/locales/ko.json
@@ -386,5 +386,30 @@
   "{20201,7201}": "보가스",
   "{20201,7301}": "플랑크톤",
   "{20201,801}": "엔진 부품",
-  "{20201,901}": "계자 코일"
+  "{20201,901}": "계자 코일",
+  "{20215,1001}": "함선 기술류",
+  "{20215,101}": "농업 제품류",
+  "{20215,1201}": "물",
+  "{20215,1601}": "드론",
+  "{20215,1701}": "기만체",
+  "{20215,1801}": "엔진",
+  "{20215,1901}": "미사일",
+  "{20215,2001}": "보호막",
+  "{20215,201}": "에너지",
+  "{20215,2101}": "소프트웨어",
+  "{20215,2201}": "추진기",
+  "{20215,2301}": "터렛들",
+  "{20215,2401}": "무기",
+  "{20215,301}": "식품",
+  "{20215,3101}": "진귀품",
+  "{20215,3201}": "불법품",
+  "{20215,3301}": "하드웨어",
+  "{20215,3401}": "사치품",
+  "{20215,3501}": "일반 아이템",
+  "{20215,401}": "가스",
+  "{20215,501}": "첨단기술 제품류",
+  "{20215,601}": "얼음",
+  "{20215,701}": "광물",
+  "{20215,801}": "약품류",
+  "{20215,901}": "정제제품류"
 }
