--- a/src/assets/x4_game_data/8.0-Diplomacy/locales/pl.json
+++ b/src/assets/x4_game_data/8.0-Diplomacy/locales/pl.json
@@ -386,5 +386,30 @@
   "{20201,7201}": "BoGaz",
   "{20201,7301}": "Plankton",
   "{20201,801}": "Części silnika",
-  "{20201,901}": "Cewki"
+  "{20201,901}": "Cewki",
+  "{20215,1001}": "Technologia okrętowa",
+  "{20215,101}": "Produkty rolne",
+  "{20215,1201}": "Woda",
+  "{20215,1601}": "Drony",
+  "{20215,1701}": "Środki obronne",
+  "{20215,1801}": "Silniki",
+  "{20215,1901}": "Rakiety",
+  "{20215,2001}": "Osłony",
+  "{20215,201}": "Energia",
+  "{20215,2101}": "Oprogramowanie",
+  "{20215,2201}": "Silniki manewrowe",
+  "{20215,2301}": "Wieżyczki",
+  "{20215,2401}": "Broń",
+  "{20215,301}": "Żywność",
+  "{20215,3101}": "Ciekawostki",
+  "{20215,3201}": "Kontrabanda",
+  "{20215,3301}": "Sprzęt",
+  "{20215,3401}": "Luksusowe",
+  "{20215,3501}": "Ogólne",
+  "{20215,401}": "Gazy",
+  "{20215,501}": "Towary High Tech",
+  "{20215,601}": "Lód",
+  "{20215,701}": "Minerały",
+  "{20215,801}": "Produkty farmaceutyczne",
+  "{20215,901}": "Produkty rafinowane"
 }
