--- a/src/assets/x4_game_data/8.0-Diplomacy/locales/pt-BR.json
+++ b/src/assets/x4_game_data/8.0-Diplomacy/locales/pt-BR.json
@@ -386,5 +386,30 @@
   "{20201,7201}": "BoGas",
   "{20201,7301}": "Plankton",
   "{20201,801}": "Peças de Motor",
-  "{20201,901}": "Bobinas de Campo"
+  "{20201,901}": "Bobinas de Campo",
+  "{20215,1001}": "Tecnologia para Naves",
+  "{20215,101}": "Artigos Agrícolas",
+  "{20215,1201}": "Água",
+  "{20215,1601}": "Drones",
+  "{20215,1701}": "Contramedidas",
+  "{20215,1801}": "Motores",
+  "{20215,1901}": "Mísseis",
+  "{20215,2001}": "Escudos",
+  "{20215,201}": "Energia",
+  "{20215,2101}": "Software",
+  "{20215,2201}": "Propulsores",
+  "{20215,2301}": "Torres",
+  "{20215,2401}": "Armas",
+  "{20215,301}": "Alimentos",
+  "{20215,3101}": "Curiosidades",
+  "{20215,3201}": "Contrabando",
+  "{20215,3301}": "Hardware",
+  "{20215,3401}": "Itens de Luxo",
+  "{20215,3501}": "Itens Gerais",
+  "{20215,401}": "Gases",
+  "{20215,501}": "Artigos High-Tech",
+  "{20215,601}": "Gelo",
+  "{20215,701}": "Minerais",
+  "{20215,801}": "Artigos Farmacêuticos",
+  "{20215,901}": "Artigos Refinados"
 }
