--- a/src/assets/x4_game_data/8.0-Diplomacy/locales/ru.json
+++ b/src/assets/x4_game_data/8.0-Diplomacy/locales/ru.json
@@ -386,5 +386,30 @@
   "{20201,7201}": "Биогаз",
   "{20201,7301}": "Планктон",
   "{20201,801}": "Детали двигателей",
-  "{20201,901}": "Полевые катушки"
+  "{20201,901}": "Полевые катушки",
+  "{20215,1001}": "Корабельное оборудование",
+  "{20215,101}": "Сельхозпродукция",
+  "{20215,1201}": "Вода",
+  "{20215,1601}": "Дроны",
+  "{20215,1701}": "Противоракетные средства",
+  "{20215,1801}": "Двигатели",
+  "{20215,1901}": "Ракеты",
+  "{20215,2001}": "Щиты",
+  "{20215,201}": "Энергия",
+  "{20215,2101}": "Программное обеспечение",
+  "{20215,2201}": "Боковые дв-ли",
+  "{20215,2301}": "Турели",
+  "{20215,2401}": "Орудия",
+  "{20215,301}": "Пища",
+  "{20215,3101}": "Редкости",
+  "{20215,3201}": "Контрабанда",
+  "{20215,3301}": "Оборудование",
+  "{20215,3401}": "Предметы роскоши",
+  "{20215,3501}": "Предметы общего назначения",
+  "{20215,401}": "Газы",
+  "{20215,501}": "Хай-тек",
+  "{20215,601}": "Лед",
+  "{20215,701}": "Минералы",
+  "{20215,801}": "Фармацевтические товары",
+  "{20215,901}": "Рафинированные товары"
 }
