--- a/src/assets/x4_game_data/8.0-Diplomacy/locales/zh-CN.json
+++ b/src/assets/x4_game_data/8.0-Diplomacy/locales/zh-CN.json
@@ -386,5 +386,30 @@
   "{20201,7201}": "Bo气",
   "{20201,7301}": "浮游生物",
   "{20201,801}": "引擎部件",
-  "{20201,901}": "励磁线圈"
+  "{20201,901}": "励磁线圈",
+  "{20215,1001}": "飞船技术",
+  "{20215,101}": "农业商品",
+  "{20215,1201}": "水",
+  "{20215,1601}": "无人机",
+  "{20215,1701}": "干扰弹",
+  "{20215,1801}": "引擎",
+  "{20215,1901}": "导弹",
+  "{20215,2001}": "护盾",
+  "{20215,201}": "能源",
+  "{20215,2101}": "软件",
+  "{20215,2201}": "推进器",
+  "{20215,2301}": "炮塔",
+  "{20215,2401}": "武器",
+  "{20215,301}": "食品",
+  "{20215,3101}": "珍奇品",
+  "{20215,3201}": "违禁品",
+  "{20215,3301}": "硬件",
+  "{20215,3401}": "奢侈品",
+  "{20215,3501}": "一般物品",
+  "{20215,401}": "气体",
+  "{20215,501}": "高科技商品",
+  "{20215,601}": "冰",
+  "{20215,701}": "矿物",
+  "{20215,801}": "药品",
+  "{20215,901}": "精炼商品"
 }
