--- a/src/assets/x4_game_data/8.0-Diplomacy/locales/zh-TW.json
+++ b/src/assets/x4_game_data/8.0-Diplomacy/locales/zh-TW.json
@@ -386,5 +386,30 @@
   "{20201,7201}": "BoGas",
   "{20201,7301}": "浮游生物",
   "{20201,801}": "引擎部件",
-  "{20201,901}": "勵磁線圈"
+  "{20201,901}": "勵磁線圈",
+  "{20215,1001}": "飛船技術",
+  "{20215,101}": "農業商品",
+  "{20215,1201}": "水",
+  "{20215,1601}": "無人機",
+  "{20215,1701}": "干擾彈",
+  "{20215,1801}": "引擎",
+  "{20215,1901}": "導彈",
+  "{20215,2001}": "護盾",
+  "{20215,201}": "能源",
+  "{20215,2101}": "軟體",
+  "{20215,2201}": "推進器",
+  "{20215,2301}": "炮塔",
+  "{20215,2401}": "武器",
+  "{20215,301}": "食品",
+  "{20215,3101}": "珍奇品",
+  "{20215,3201}": "違禁品",
+  "{20215,3301}": "硬體",
+  "{20215,3401}": "奢侈品",
+  "{20215,3501}": "一般物品",
+  "{20215,401}": "氣體",
+  "{20215,501}": "高科技商品",
+  "{20215,601}": "冰",
+  "{20215,701}": "礦物",
+  "{20215,801}": "藥品",
+  "{20215,901}": "精煉商品"
 }
