--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -5,6 +5,9 @@
     "hourly_rate": "Hourly Rate",
     "no_active_production": "No Active Production",
     "add_modules_hint": "Add production modules to see data",
+    "quantity_view": "Quantity View",
+    "volume_view": "Volume View",
+    "economy_view": "Economy View",
     "workforce_needed": "Workforce Needed",
     "workforce_capacity": "Workforce Capacity",
     "efficiency_bonus": "Efficiency Bonus",
