--- a/src/locales/zh-CN.json
+++ b/src/locales/zh-CN.json
@@ -5,6 +5,9 @@
     "hourly_rate": "每小时流量",
     "no_active_production": "暂无活跃生产周期",
     "add_modules_hint": "请添加生产模块以查看数据",
+    "quantity_view": "数量视图",
+    "volume_view": "体积视图",
+    "economy_view": "经济视图",
     "workforce_needed": "所需劳动力",
     "workforce_capacity": "劳动力容量",
     "efficiency_bonus": "产量加成",
