--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -2,9 +2,12 @@
   "ui": {
     "resource_overview": "Resource Production Overview",
     "volume_overview": "Volume Overview",
+    "products_group": "Products",
+    "operations_group": "Operations",
+    "resources_group": "Resources",
     "income_group": "Product Income",
-    "operations_group": "Operations Expenses",
-    "resources_group": "Resource Expenses",
+    "expenses_operations_group": "Operations Expenses",
+    "expenses_resources_group": "Resource Expenses",
     "current_efficiency": "Current Efficiency",
     "hourly_rate": "Hourly Rate",
     "no_active_production": "No Active Production",
