--- a/src/locales/zh-CN.json
+++ b/src/locales/zh-CN.json
@@ -2,9 +2,12 @@
   "ui": {
     "resource_overview": "资源产出概览",
     "volume_overview": "体积概览",
+    "products_group": "产品",
+    "operations_group": "运营",
+    "resources_group": "资源",
     "income_group": "产品收入",
-    "operations_group": "运营支出",
-    "resources_group": "资源支出",
+    "expenses_operations_group": "运营支出",
+    "expenses_resources_group": "资源支出",
     "current_efficiency": "当前综合效率",
     "hourly_rate": "每小时流量",
     "no_active_production": "暂无活跃生产周期",
